# recall

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: forget.md  memories.md  recall.md  remember.md
docs/: GRAPH_EXPANSION.md  LONG_TERM_MEMORY_RESEARCH.md  USAGE.md  VALIDATION_LOOP.md  hooks-setup.md
docs/plans/: forget-id-detection.yaml  graph-expansion.yaml  graph-inspection-tool.yaml  recall-mcp.yaml
docs/research_reports/: AI_Memory_Systems_Lessons_Learned.md  MEMORY_SYSTEMS_RESEARCH.md  ai-agent-memory-research-report.md  chromadb_memory_system_research.md  hybrid_vector_graph_memory_research.md
hooks/: recall-capture.py  recall-compact.py  recall-context.py  recall-errors.py  recall-monitor.py  recall-precontext.py  recall-prompt.py  recall-stop.py  recall-subagent.py  recall-track.py  session_metrics.py  settings.example.json
poc/: test_recall_concept.py
src/recall/: __init__.py  __main__.py  config.py  monitoring.py  validation.py
src/recall/embedding/: __init__.py  ollama.py
src/recall/memory/: __init__.py  operations.py  types.py
src/recall/storage/: __init__.py  chromadb.py  hybrid.py  sqlite.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_elf_features.py  test_mcp_server.py
tests/unit/: __init__.py  test_chromadb_store.py  test_hybrid_store.py  test_memory_operations.py  test_memory_types.py  test_ollama_client.py  test_sqlite_store.py
