[project]
name = "recall"
version = "0.1.0"
description = "Long-term memory system for Claude Code"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]",
    "chromadb",
    "httpx",
    "pydantic",
    "pydantic-settings",
]

[project.scripts]
recall = "recall:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/recall"]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.0.0",
    "pytest-httpx>=0.32.0",
    "pytest-mock>=3.14.0",
    "mypy>=1.8.0",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = false
strict = false

[[tool.mypy.overrides]]
module = [
    "pydantic_settings",
    "mcp.*",
    "chromadb.*",
]
ignore_missing_imports = true
